Closed Bug 378563 Opened 17 years ago Closed 17 years ago

warning in getNameCB when opening a new page

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)

Details

Attachments

(1 file)

I got this warning in getNameCB for 4 times when opening a new page

WARNING: NS_ENSURE_TRUE(NS_SUCCEEDED(rv)) failed: file nsAccessibleWrap.cpp, line 670
WARNING: NS_ENSURE_TRUE(NS_SUCCEEDED(rv)) failed: file nsAccessibleWrap.cpp, line 670
WARNING: NS_ENSURE_TRUE(NS_SUCCEEDED(rv)) failed: file nsAccessibleWrap.cpp, line 670
WARNING: NS_ENSURE_TRUE(NS_SUCCEEDED(rv)) failed: file nsAccessibleWrap.cpp, line 670
Attached patch patchSplinter Review
reduce one warning, nsDocAccessible gets mParent, but nsOuterDocAccessible doesn't get mFirstChild. Use GetFirstChild instead.

other warnings are caused by nsXULTabPanelsAccessible::GetName()
it returns NS_ERROR_NOT_IMPLEMENTED
not sure how to deal with
Comment on attachment 262626 [details] [diff] [review]
patch

For the XUL tab panels name just return NS_LITERAL_STRING("") and NS_OK.
Attachment #262626 - Flags: review+
Fixed, using aName.Truncate() and return NS_OK for XUL tab panels name
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: