Bug 378563 warning in getNameCB when opening a new pager=aaronleventhal